@@ -4,6 +4,8 @@
 	sql/ResultSetWindow.java, sql/SqlServerType.java: using proper
 	server-specific formatting for ResultSetWindow (including clipboard
 	operations)
+	* sql/ResultSetWindow.java: improving tooltips, providing query
+	name as tab tooltip, server type as server name tooltip
 
 2007-01-24        svu
 
